set path to correct height so scrolling is smoother as path becomes stuck

--- a/components/path/stylesheets/path.styl
+++ b/components/path/stylesheets/path.styl
@@ -23,7 +23,7 @@
     z-index header_z
     top 0
     left 50px
-    height 50px
+    height 38px
     margin 0
     background-color backgroundgray
 
